fix spacing on notes

--- a/style_js_frame.css
+++ b/style_js_frame.css
@@ -293,7 +293,7 @@ a.file:link, a.file:visited, a.file:active {
     height: 13px;
 }
 
-.content.docfile h2 {
+.content.docfile h2, .note h2 {
     margin-block-start: 0em;
     margin-block-end: 0em;
 }
